--- a/mobile/src/main/res/layout/activity_example.xml
+++ b/mobile/src/main/res/layout/activity_example.xml
@@ -50,5 +50,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/countTV" />
 
+        <Button
+            android:id="@+id/tBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:text="Go to Second Activity"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/countBTN" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
